# cmake_tuto

./: .gitignore  README.md
multiple_source/: CMakeLists.txt  foo.cpp  main.cpp
step1/lesson1/: CMakeLists.txt
steps/lesson1/: CMakeLists.txt
steps/lesson2/: CMakeLists.txt
steps/lesson3/: CMakeLists.txt
steps/lesson4/: CMakeLists.txt  tutorial.cpp
steps/lesson4/MathFunctions/: mysqrt.cpp  mysqrt.h
